--- a/dash_1.css
+++ b/dash_1.css
@@ -1,9 +1,9 @@
-ag-theme-quartz.compact {
+.ag-theme-quartz.compact {
     --ag-grid-size: 3px;
 }
-ag-theme-quartz-dark.compact {
+.ag-theme-quartz-dark.compact {
     --ag-grid-size: 3px;
 }
-ag-theme-quartz-auto-dark.compact {
+.ag-theme-quartz-auto-dark.compact {
     --ag-grid-size: 3px;
 }
